--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -1,5 +1,16 @@
 #!/bin/sh
 
+# See if we are skipping this test
+if test -n "$SKIP_TESTS"; then
+    T1=`basename $1`
+    T2=`echo "$SKIP_TESTS" | sed "s/$T1//"`
+    # Two spaces (meaning an entry was deleted completely) or the
+    # total entry was deleted and nothing was left.
+    if (echo "$T2" | grep '  ') || test -z $T2; then
+	exit 77
+    fi
+fi
+
 SRCDIR="@top_srcdir@"
 TEST_SRCDIR="${SRCDIR}/tests"
 BUILDDIR="@top_builddir@"
