--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -46,8 +46,8 @@ jobs:
           # Unfortunately, on github, test_mdns.py hangs.  I tried
           # it in an AWS windows server 2022 instance and it worked
           # fine, so I don't know what is going on.  The pygensio
-          # mdns test works fine.
-          #make check
+          # and go mdns test work fine.
+          make check SKIP_TESTS=test_mdns.py
       - name: Upload installed files
         uses: actions/upload-artifact@v3
         with:
