github: Ignore more tests for windows, enable oomtest
Add some more tests that are flaky on windows to the skip list.

Add --enable-interna-trace so oomtests will run.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/linuxbuild.yml
+++ b/.github/workflows/linuxbuild.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           mkdir $INSTALLPREFIX
           ./reconf
-          ./configure --prefix=$(pwd)/$INSTALLPREFIX/
+          ./configure --prefix=$(pwd)/$INSTALLPREFIX/ --enable-internal-trace
       - name: Build
         run: |
           make
