--- a/.github/workflows/macosbuild.yml
+++ b/.github/workflows/macosbuild.yml
@@ -28,7 +28,7 @@ jobs:
         run: |
           mkdir $INSTALLPREFIX
           ./reconf
-          ./configure --prefix=$(pwd)/$INSTALLPREFIX/
+          ./configure --prefix=$(pwd)/$INSTALLPREFIX/ --enable-internal-trace
       - name: Build
         run: |
           make
