--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -6,7 +6,7 @@ if test -n "$SKIP_TESTS"; then
     T2=`echo "$SKIP_TESTS" | sed "s/$T1//"`
     # Two spaces (meaning an entry was deleted completely) or the
     # total entry was deleted and nothing was left.
-    if (echo "$T2" | grep '  ') || test -z $T2; then
+    if (echo "$T2" | grep '  ') || test -z "$T2"; then
 	exit 77
     fi
 fi
