--- a/c++/swig/pygensio/tests/Makefile.am
+++ b/c++/swig/pygensio/tests/Makefile.am
@@ -1,6 +1,8 @@
 
 export VERBOSE = 1
 
+AM_TESTS_ENVIRONMENT = SKIP_TESTS="$(SKIP_TESTS)"
+
 LOG_COMPILER = $(SHELL) $(builddir)/runtest
 
 TESTS = test_basic.py test_ax25.py test_crypto.py test_mdns.py \
