examples: Add an example of using IODs for user-supplied fds
If a user has their own file descriptors, this shows how they can use
the main OS funcs to do the select/poll for them.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,6 +1,6 @@
 
 noinst_PROGRAMS = basic_server basic_server_sync basic_client \
-	basic_server_sync_fork
+	basic_server_sync_fork use_iods
 
 EXTRA_DIST = basic_server.py basic_client.py
 
@@ -22,5 +22,10 @@ basic_server_sync_LDADD = $(top_builddir)/lib/libgensio.la \
 basic_server_sync_fork_SOURCES = basic_server_sync_fork.c
 
 basic_server_sync_fork_LDADD = $(top_builddir)/lib/libgensio.la \
+	$(top_builddir)/lib/libgensioosh.la
+
+use_iods_SOURCES = use_iods.c
+
+use_iods_LDADD = $(top_builddir)/lib/libgensio.la \
 	$(top_builddir)/lib/libgensioosh.la
 
