github: Try again disabling mdns tests on macos
Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/.github/workflows/macosbuild.yml
+++ b/.github/workflows/macosbuild.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
           make
           make install
-          make check SKIP_TESTS="test_mdns"
+          make check SKIP_TESTS="test_mdns test_mdns.py"
