Yet one more fix for skipping tests
runtest in go wasn't right.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/go/tests/runtest.in
+++ b/c++/swig/go/tests/runtest.in
@@ -23,6 +23,12 @@ if [ -z "$1" ]; then
     exit 1
 fi
 
+# See if we are skipping this test
+T1=`basename $1`
+if echo "$SKIP_TESTS" | grep -q "$T1"; then
+    exit 77
+fi
+
 TEST=$1
 shift
 
