--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,64 @@
-config.*
-configure
+# http://www.gnu.org/software/automake
 Makefile
 Makefile.in
-tags
-ser2net.spec
-missing
-aclocal.m4
+/ar-lib
+/test-driver
+.deps/
+.dirstamp
+
+# http://www.gnu.org/software/autoconf
+autom4te.cache
+/autoscan.log
+/autoscan-*.log
+/aclocal.m4
+/compile
+/config.cache
+/config.guess
+/config.h
+/config.h.in
+/config.log
+/config.status
+/config.sub
+/configure
+/configure.scan
+/depcomp
+/install-sh
+/missing
+/stamp-h1
+
+# https://www.gnu.org/software/libtool/
 libtool
-ltmain.sh
-depcomp
-install-sh
-/.deps/
-/autom4te.cache/
-m4/lt*.m4
+/ltmain.sh
+
+# http://www.gnu.org/software/m4/
 m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+
+# compiler generated stuff
+.deps/
+.libs/
 *.o
 *~
 *.pyc
 *.cmd
+*.lo
+*.la
+*.a
+*.pc
 .tmp_versions
 Module.*
 modules.*
-*.ko
-*.mod.c
-*.ur-safe
-ser2net
-/.vs
 /out
+runtest
+
+# editor
 /CMakeSettings.json
+*.ur-safe
+/.vs
+INSTALL
+*.patch
+*.orig
+*.rej
