--- a/tests/runtest.in
+++ b/tests/runtest.in
@@ -54,7 +54,11 @@ else
 fi
 
 if ${PYTHON_MODE}; then
-    export PYTHONPATH=${BUILDDIR}/swig/python:${BUILDDIR}/swig/python/.libs:${BUILDDIR}/glib/swig/python:${BUILDDIR}/glib/swig/python/.libs:${BUILDDIR}/tcl/swig/python:${BUILDDIR}/tcl/swig/python/.libs:${TEST_BUILDDIR}
+    export PYTHONPATH="${BUILDDIR}/swig/python:${BUILDDIR}/swig/python/.libs:${BUILDDIR}/glib/swig/python:${BUILDDIR}/glib/swig/python/.libs:${BUILDDIR}/tcl/swig/python:${BUILDDIR}/tcl/swig/python/.libs:${TEST_BUILDDIR}"
+    if [ ! -z "$MSYSTEM" ]; then
+	# PYTHONPATH is separated by ; on windows
+        export PYTHONPATH=`echo ${PYTHONPATH} | tr ':' ';'`
+    fi
     TEST="${PYTHON} ${TEST}"
     export GENSIO_MEMTRACK=abort
 else
@@ -66,7 +70,7 @@ fi
 
 # We need to put the DLL in PATH for MSYS on Windows
 if [ ! -z "$MSYSTEM" ]; then
-    export PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:$PATH:${BUILDDIR}/glib/.libs:${BUILDDIR}/tcl/.libs:${BUILDDIR}/swig/python/.libs
+    export PATH="${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:${BUILDDIR}/glib/.libs:${BUILDDIR}/tcl/.libs:${BUILDDIR}/swig/python/.libs:$PATH"
 else
     export LD_LIBRARY_PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:${BUILDDIR}/glib/.libs:${BUILDDIR}/tcl/.libs:${BUILDDIR}/swig/python/.libs
 fi
@@ -77,7 +81,7 @@ fi
 if ${PRINT_MODE}; then
     echo export PYTHONPATH="${PYTHONPATH}"
     if [ ! -z "$MSYSTEM" ]; then
-	echo export PATH=${BUILDDIR}/lib:${BUILDDIR}/lib/.libs:\$PATH:${BUILDDIR}/swig/python/.libs:${BUILDDIR}/glib/.libs:${BUILDDIR}/tcl/.libs
+	echo export PATH="${PATH}"
     else
 	echo export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}"
     fi
