--- a/.github/workflows/winbuild.yml
+++ b/.github/workflows/winbuild.yml
@@ -49,7 +49,7 @@ jobs:
           # and go mdns test work fine.
           # test_ratelimit.py fails sometimes with a "data too slow".  Probably
           # from running windows in a VM.
-          make check SKIP_TESTS="test_mdns.py test_ratelimit.py"
+          make check SKIP_TESTS="test_mdns.py test_ratelimit.py oomtest9 oomtest11"
       - name: Upload installed files
         uses: actions/upload-artifact@v3
         with:
