Rework unix sockets
Add support for unix datagram sockets and unix seqpacket sockets.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -8,6 +8,8 @@ gensios_enabled = {
     "stdio": 1,
     "pty": @HAVE_PTY@,
     "unix" : @HAVE_UNIX@,
+    "unixdgram" : @HAVE_UNIX@,
+    "unixseq" : @HAVE_UNIX@,
     "ssl": @HAVE_OPENSSL@,
     "mux": 1,
     "certauth": @HAVE_OPENSSL@,
@@ -35,6 +37,8 @@ final_gensios = [
     "stdio",
     "pty",
     "unix",
+    "unixdgram",
+    "unixseq",
     "serialdev",
     "echo",
     "file",
