--- a/tests/gensios_enabled.py.in
+++ b/tests/gensios_enabled.py.in
@@ -4,6 +4,9 @@ import platform
 def running_on_linux():
     return platform.system() == "Linux"
 
+def running_on_windows():
+    return platform.system() == "Windows"
+
 # Track which gensios are enabled in the library
 gensios_enabled = {
     "tcp": 1,
@@ -11,9 +14,9 @@ gensios_enabled = {
     "sctp": @HAVE_LIBSCTP@,
     "stdio": 1,
     "pty": @HAVE_PTY@,
-    "unix" : @HAVE_UNIX@,
-    "unixdgram" : @HAVE_UNIX@,
-    "unixseq" : @HAVE_UNIX@ and running_on_linux(),
+    "unix" : 1,
+    "unixdgram" : not running_on_windows(),
+    "unixseq" : running_on_linux(),
     "ssl": @HAVE_OPENSSL@,
     "mux": 1,
     "certauth": @HAVE_OPENSSL@,
