Fix various visibility issues
There were some incorrect visibility issues and some problems with
proper shared library flags dealing with visibility on the python
libraries.  Easy fixes.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/c++/swig/pygensio/Makefile.am
+++ b/c++/swig/pygensio/Makefile.am
@@ -29,7 +29,8 @@ _pygensio_la_LIBADD = $(top_builddir)/c++/lib/libgensiooshcpp.la \
 		$(top_builddir)/lib/libgensiomdns.la \
 		$(PYTHON_UNDEF_LIBS)
 _pygensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
+		-no-undefined $(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET) \
+		$(PYTHON_LIBS)
 
 clean-local:
 	rm -rf __pycache__ pygensio_wrap.cc pygensio_wrap.h pygensio.py
