python: Remove -no-undefined and python linkage
According to homebrew, the python modules should not directly link
against the python libraries.  So remove those.

Signed-off-by: Corey Minyard <corey@minyard.net>

--- a/swig/python/Makefile.am
+++ b/swig/python/Makefile.am
@@ -41,10 +41,9 @@ _gensio_la_LIBADD = $(top_builddir)/lib/libgensio.la \
 		$(PYTHON_UNDEF_LIBS) libgensio_python_swig.la \
 		$(top_builddir)/lib/libgensio.la \
 		$(top_builddir)/lib/libgensioosh.la \
-		$(top_builddir)/lib/libgensiomdns.la \
-		$(PYTHON_LIBS)
+		$(top_builddir)/lib/libgensiomdns.la
 _gensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined $(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
+		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ gensio_wrap.c gensio.py
