--- a/c++/swig/pygensio/Makefile.am
+++ b/c++/swig/pygensio/Makefile.am
@@ -29,8 +29,7 @@ _pygensio_la_LIBADD = $(top_builddir)/c++/lib/libgensiooshcpp.la \
 		$(top_builddir)/lib/libgensiomdns.la \
 		$(PYTHON_UNDEF_LIBS)
 _pygensio_la_LDFLAGS = -module -avoid-version $(OPENSSL_LDFLAGS) \
-		-no-undefined $(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET) \
-		$(PYTHON_LIBS)
+		$(PYTHON_UNDEF_FLAG) $(PYTHON_EXT_EXT_SET)
 
 clean-local:
 	rm -rf __pycache__ pygensio_wrap.cc pygensio_wrap.h pygensio.py
